fixing the spacing by aligning the images frpom fix wrap

--- a/geographics/assets/css/main.css
+++ b/geographics/assets/css/main.css
@@ -91,6 +91,7 @@ a {
   .main {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: flex-start;
   }
   
   .business {
@@ -103,6 +104,7 @@ a {
 	width: 50%;
 	display: flex;
 	flex-wrap: wrap;
+	align-items: flex-start;
   }
   
   .thumbnail {
@@ -133,16 +135,23 @@ a {
   .textleft{
 	width: 50%;
 	padding: 1.5vw;
-  }
+	
+}
+.textleft p:nth-child(1) {
+text-indent: 0px;
+}
 
-  .textright{
+
+ .textleft p {
+	text-indent: 3vw;
+	}
+
+.textright{
 	width: 50%;
 	padding: 1.5vw;
-	
+	}
 
-  }
-
-  .textcon {
+.textcon {
 	margin-bottom: 10vh;
 	width: 100%;
 	display: flex;
